# binary-classifier

./: .gitignore  README.md  pyproject.toml
src/classifier/: classify.py  feature_importance.py  filenames.py  filter.py
