[project]
name = "classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Franco Grobler", email = "franco@grobler.fyi" }]
requires-python = ">=3.12,<3.13"
dependencies = [
  "joblib>=1.4.2",
  "matplotlib>=3.10.1",
  "numpy>=2.1.3",
  "pandas>=2.2.3",
  "pandas-stubs>=2.2.3.241126",
  "scikeras>=0.13.0",
  "scikit-learn>=1.6.1",
  "tensorflow>=2.19.0",
]

[project.scripts]
classify = "classifier.classify:main"
filter = "classifier.filter:main"
feat_importance = "classifier.feature_importance:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
include = ["src"]
exclude = ["**/__pycache__"]
ignore = [""]

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.12"

executionEnvironments = [{ root = "src" }]
